Thu Jun 16 2011 Aleksey
	* === Version 1.2.6 ===

Sat Jun 11 2011 Aleksey
	* allowed options to be intermixed with file names in arbitrary order
	* switched option -G and the '%G' printf pattern to print GOST hash
	* Bugfix: --output failed for cyrillic file name

Wed Jun  8 2011 Aleksey
	* librhash: better shared library compilation/testing support

Mon Jun  6 2011 Aleksey
	* librhash: exported benchmarking functions in the shared library
	* librhash: added prefix to all functions to avoid poluting linker namespace
	* librhash: fixed rare alignment bugs in rhash_print and EDON-R 512

Sat May 28 2011 Aleksey
	* librhash: loading openssl at runtime if it is present
	* Bugfix: LLVM GOST amd64 asm compilation error

Wed May 18 2011 Aleksey
	* === Version 1.2.5 ===
	* option --openssl allows to replace some algorithms by the OpenSSL ones
	* Bugfix: incorrect recursive traversing of very long UTF-8 filepaths

Wed Apr 27 2011 Aleksey
	* Bugfix: corrected calculation of BTIH hash and torrent files

Fri Apr 15 2011 Aleksey
	* === Version 1.2.4 ===
	* option --benchmark-raw for machine-readable benchmark output format
	* on Intel/AMD CPUs benchmark now prints the clocks-per-byte value

Tue Apr  5 2011 Aleksey
	* changed config file locations

Fri Apr  1 2011 Aleksey
	* Bugfix: repaired --path-separator on linux/unix

Sun Mar 27 2011 Aleksey
	* === Version 1.2.3 ===

Fri Mar 25 2011 Aleksey
	* one-line percent for linux/unix

Mon Mar 14 2011 Aleksey
	* added printf modificator %{mtime} to print the last modified date of a file

Thu Feb 17 2011 Aleksey
	* Bugfix: verification of base2-like formated md5 hash sums

Fri Jan 14 2011 Aleksey
	* === Version 1.2.2 ===
	* one-line percents (windows only)

Tue Jan 11 2011 Aleksey
	* supported EDON-R 256/512 hash sums

Sun Dec 19 2010 Aleksey
	* increased process priority when benchmarking on windows

Thu Dec 16 2010 Aleksey
	* Bugfix: eight hash sums were broken on PowerPC
	* Bugfix: --accept/--crc-accept were not working since 1.1.9
