@@ -1,3 +1,9 @@
+Fri Jun 24 2011 Aleksey
+	* Bugfix: default output encoding should be UTF-8 on Windows
+
+Wed Jun 22 2011 Aleksey
+	* Bugfix: crash on WinXP
+
 Thu Jun 16 2011 Aleksey
 	* === Version 1.2.6 ===
 
